--- a/ComplaintsManagement.UI/Views/Complaints/Create.cshtml
+++ b/ComplaintsManagement.UI/Views/Complaints/Create.cshtml
@@ -7,87 +7,96 @@
     var complaintsOptions = (System.Collections.Generic.List<ComplaintsManagement.Infrastructure.DTOs.ComplaintsOptionsDto>)TempData["options"];
 }
 
-<div class="container">
-    <h2>Mantenimiento de Reclamos y Quejas</h2>
+<div class="card">
+    <div class="card-header bg-primary">    <h2 class="text-white">Mantenimiento de Reclamos y Quejas</h2></div>
 
 
-    <div class="row">
-        <div class="col-lg-12">
-            @using (Html.BeginForm(controllerName: "Complaints", actionName: "Create", method: FormMethod.Post))
-            {
-                @Html.AntiForgeryToken()
-
-            <div class="form-horizontal">
-                <h4>Creación de Reclamos y Quejas</h4>
-                <hr />
-                @if (!Model.Success)
+    <div class="container">
+        <div class="row card-body">
+            <div class="col-lg-12">
+                @using (Html.BeginForm(controllerName: "Complaints", actionName: "Create", method: FormMethod.Post))
                 {
-                    <span class="alert alert-danger" style="margin-top: 2rem;">@Model.Message</span>
+                    @Html.AntiForgeryToken()
+
+                <div class="form-horizontal">
+                    <h4 class="mt-3">Creación de Reclamos y Quejas</h4>
                     <hr />
+                    @if (!Model.Success)
+                    {
+                        <span class="alert alert-danger" style="margin-top: 2rem;">@Model.Message</span>
+                        <hr />
+                    }
+
+                    @if (Model.Success && Model.Message?.Length > 0)
+                    {
+                        <span class="alert alert-success" style="margin-top: 2rem;">@Model.Message</span>
+                        <hr />
+                    }
+
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+                    <div class="form-group">
+                        <label class="control-label col-md-2">Clientes</label>
+                        <div class="col-md-12">
+                            @Html.DropDownListFor(e => e.Data.UsersId, (List<SelectListItem>)ViewBag.Customers, new { @Class = "form-control", id = "customers__dd" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-2">Productos</label>
+                        <div class="col-md-12">
+                            @Html.DropDownListFor(e => e.Data.ProductsId, (List<SelectListItem>)ViewBag.Products, new { @Class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-2">Opciones</label>
+                        <div class="col-md-12">
+                            @Html.DropDownListFor(e => e.Data.ComplaintsOptionsId, (List<SelectListItem>)ViewBag.ComplaintsOptions, new { @Class = "form-control" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-2">Tipo</label>
+                        <div class="col-md-12">
+                            <select name="Data.Type" class="form-control">
+                                <option value="queja">Queja</option>
+                                <option value="reclamacion">Reclamacion</option>
+                            </select>
+                        </div>
+                    </div>
+                    @Html.HiddenFor(e => e.Data.StatusId)
+                    <div class="form-group">
+                        <label class="control-label col-md-2">Comentario</label>
+                        <div class="col-md-12">
+                            @Html.TextAreaFor(model => model.Data.Comment, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.Data.Comment, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-12">
+                            <input type="submit" value="Create" class="btn btn-default" />
+                        </div>
+                    </div>
+                    <div>
+                        <button class="btn btn-default">@Html.ActionLink("Regresar al listado de Quejas y Reclamaciones", "Index")</button>
+                    </div>
+                </div>
                 }
-
-                @if (Model.Success && Model.Message?.Length > 0)
-                {
-                    <span class="alert alert-success" style="margin-top: 2rem;">@Model.Message</span>
-                    <hr />
-                }
-
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-                <div class="form-group">
-                    <label class="control-label col-md-2">Producto</label>
-                    <div class="col-md-10">
-                        <select name="Data.ProductsId" class="form-control">
-                            @foreach (var product in products)
-                            {
-                                <option value="@product.Id">@product.Name</option>
-                            }
-                        </select>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-md-2">Opciones</label>
-                    <div class="col-md-10">
-                        <select name="Data.ComplaintsOptionsId" class="form-control">
-                            @foreach (var options in complaintsOptions)
-                            {
-                                <option value="@options.Id">@options.Name</option>
-                            }
-                        </select>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-md-2">Tipo</label>
-                    <div class="col-md-10">
-                        <select name="Data.ComplaintsOptionsId" class="form-control">
-                            <option value="queja">Queja</option>
-                            <option value="reclamacion">Reclamacion</option>
-                        </select>
-                    </div>
-                </div>
-                @Html.HiddenFor(e => e.Data.StatusId)
-                <div class="form-group">
-                    <label class="control-label col-md-2">Comentario</label>
-                    <div class="col-md-10">
-                        @Html.TextAreaFor(model => model.Data.Comment, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Data.Comment, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Create" class="btn btn-default" />
-                    </div>
-                </div>
             </div>
-            }
+
         </div>
     </div>
 
 
-    <div>
-        <button class="btn btn-default">@Html.ActionLink("Regresar al listado de Quejas y Reclamaciones", "Index")</button>
-    </div>
+    
 </div>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+<script>
+    $(document).ready(function () {
+        $('#customers__dd').select2();
+    });
+</script>
+
+
