--- a/ComplaintsManagement.UI/Views/Complaints/Index.cshtml
+++ b/ComplaintsManagement.UI/Views/Complaints/Index.cshtml
@@ -24,68 +24,76 @@
 
 }
 
-<div class="container">
-    <h2>Mantenimiento de Quejas y Reclamaciones</h2>
-    <h4>Listado de Quejas</h4>
-    <hr />
-    @if (!Success && Message?.Length > 0)
-    {
-        <span class="alert alert-danger">@Message</span>
+<div class="card">
+    <div class="card-header bg-primary"><h2 class="text-white">Mantenimiento de Quejas y Reclamaciones</h2></div> 
+    <div class="container card-body">
+        <h4 class="mt-4">Listado de Quejas</h4>
         <hr />
-    }
+        @if (!Success && Message?.Length > 0)
+        {
+            <span class="alert alert-danger">@Message</span>
+            <hr />
+        }
 
-    @if (Success && Message?.Length > 0)
-    {
-        <span class="alert alert-success">@Message</span>
-        <hr />
-    }
-    <div class="row">
+        @if (Success && Message?.Length > 0)
+        {
+            <span class="alert alert-success">@Message</span>
+            <hr />
+        }
+        <div class="row">
 
-        <div class="col-lg-offset-10"></div>
-        <div class="col-lg-12">
-            @Html.ActionLink("Agregar", "Create", null, htmlAttributes: new { @Class = "btn btn-primary" })
+            <div class="col-lg-offset-10"></div>
+            <div class="col-lg-12">
+                @Html.ActionLink("Agregar", "Create", null, htmlAttributes: new { @Class = "btn btn-primary" })
+            </div>
+
         </div>
-
-    </div>
-    <div class="row" style="margin-top: 2rem;">
-        <div class="col-lg-12">
-            <table class="table table-bordered">
-                <thead>
-                    <tr>
-                        <th>Id</th>
-                        <th>Reclamación</th>
-                        <th>Producto</th>
-                        <th>Estado</th>
-                        <th>Fecha de creación</th>
-                        <th>Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var complaints in Model.Data)
-                    {
+        <div class="row" style="margin-top: 2rem;">
+            <div class="col-lg-12">
+                <table class="table table-bordered">
+                    <thead>
                         <tr>
-                            <td>@complaints.Id</td>
-                            <td>@complaints.ComplaintsOption.Name</td>
-                            <td>@complaints.Product.Name</td>
-                            <td>@complaints.Status.Name</td>
-                            <td>@complaints.CreatedAt.ToString("MM/dd/yyyy hh:mm tt")</td>
-
-
-
-                            <td>
-                                @using (Html.BeginForm(actionName: "Delete", controllerName: "Complaints", method: FormMethod.Post))
-                                {
-                                    var Id = complaints.Id;
-                                    @Html.HiddenFor(model => Id);
-                                    <button onclick="return confirm('¿Estás seguro de eliminar este registro?')" class="btn btn-danger">Eliminar</button>
-                                    @*@Html.ActionLink("Editar", "Edit", new { Id = complaints.Id }, htmlAttributes: new { @Class = "btn btn-warning" })*@
-                                } 
-                            </td>
+                            <th>#</th>
+                            <th>Cliente</th>
+                            <th>Departamento responsable</th>
+                            <th>Reclamación o Queja</th>
+                            <th>Producto</th>
+                            <th>Estado</th>
+                            <th>Fecha de creación</th>
+                            <th>Acciones</th>
                         </tr>
-                    }
+                    </thead>
+                    <tbody>
+                        @foreach (var complaints in Model.Data)
+                        {
+                            <tr>
+                                <td>@complaints.Id</td>
+                                <td>@complaints.Customer.Name @complaints.Customer.LastName (@complaints.Customer.DocumentNumber)</td>
+                                <td>@complaints.Department.Name</td>
+                                <td>@complaints.ComplaintsOption.Name</td>
+                                <td>@complaints.Product.Name</td>
+                                <td>@complaints.Status.Name</td>
+                                <td>@complaints.CreatedAt.ToString("MM/dd/yyyy hh:mm tt")</td>
 
-                </tbody>
-            </table>
+
+
+                                <td>
+                                    @using (Html.BeginForm(actionName: "Delete", controllerName: "Complaints", method: FormMethod.Post))
+                                    {
+                                        var Id = complaints.Id;
+                                        @Html.HiddenFor(model => Id);
+                                        <button onclick="return confirm('¿Estás seguro de eliminar este registro?')" class="btn btn-danger">Eliminar</button>
+                                        @Html.ActionLink("Ver", "Details", new { Id = complaints.Id }, htmlAttributes: new { @Class = "btn btn-success" })
+                                    }
+
+
+                                </td>
+                            </tr>
+                        }
+
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
