--- a/ComplaintsManagement.UI/Views/ComplaintsOptions/Create.cshtml
+++ b/ComplaintsManagement.UI/Views/ComplaintsOptions/Create.cshtml
@@ -7,64 +7,69 @@
 }
 
 <div class="card">
-    <h2>Mantenimiento de Opciones de Reclamo</h2>
+    <div class="card-header bg-primary"><h2 class="text-white">Mantenimiento de Opciones de Reclamo</h2></div> 
 
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                @using (Html.BeginForm(controllerName: "ComplaintsOptions", actionName: "Create", method: FormMethod.Post))
+                {
+                    @Html.AntiForgeryToken()
 
-    <div class="row">
-        <div class="col-lg-12">
-            @using (Html.BeginForm(controllerName: "ComplaintsOptions", actionName: "Create", method: FormMethod.Post))
-            {
-                @Html.AntiForgeryToken()
-
-                <div class="form-horizontal">
-                    <h4>Creación de Opciones de Reclamo</h4>
-                    <hr />
-                    @if (!Model.Success)
-                    {
-                        <span class="alert alert-danger" style="margin-top: 2rem;">@Model.Message</span>
+                    <div class="form-horizontal">
+                        <h4 class="mt-3">Creación de Opciones de Reclamo</h4>
                         <hr />
-                    }
+                        @if (!Model.Success)
+                        {
+                            <span class="alert alert-danger" style="margin-top: 2rem;">@Model.Message</span>
+                            <hr />
+                        }
 
-                    @if (Model.Success && Model.Message?.Length > 0)
-                    {
-                        <span class="alert alert-success" style="margin-top: 2rem;">@Model.Message</span>
-                        <hr />
-                    }
+                        @if (Model.Success && Model.Message?.Length > 0)
+                        {
+                            <span class="alert alert-success" style="margin-top: 2rem;">@Model.Message</span>
+                            <hr />
+                        }
 
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Data.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.Data.Name, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Data.Name, "", new { @class = "text-danger" })
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Data.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Data.Name, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Data.Name, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="control-label col-md-2">Producto</label>
+                            <div class="col-md-10">
+                                @Html.DropDownListFor(e => e.Data.ProductsId, (List<SelectListItem>)ViewBag.Products, new { @Class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.Data.ProductsId, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-2">Departamento</label>
+                            <div class="col-md-10">
+                                @Html.DropDownListFor(e => e.Data.DepartmentsId, (List<SelectListItem>)ViewBag.Departments, new { @Class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.Data.DepartmentsId, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-offset-2 col-md-10">
+                                <input type="submit" value="Create" class="btn btn-default" />
+                            </div>
                         </div>
                     </div>
-
-                    <div class="form-group">
-                        <label class="control-label col-md-2">Producto</label>
-                        <div class="col-md-10">
-                            <select name="Data.ProductsId" class="form-control">
-                            @foreach (var product in products)
-                            {
-                                <option value="@product.Id">@product.Name</option>
-                            }
-                            </select>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Create" class="btn btn-default" />
-                        </div>
-                    </div>
-                </div>
-            }
+                }
+            </div>
         </div>
-    </div>
 
 
-    <div>
-        <button class="btn btn-default">@Html.ActionLink("Regresar al listado de clientes", "Index")</button>
+        <div class="row">
+            <div class="col-12">
+                <button class="btn btn-default">@Html.ActionLink("Regresar al listado de Opciones de Reclamo", "Index")</button>
+            </div>
+        </div>
     </div>
 </div>
 @section Scripts {
