--- a/ComplaintsManagement.UI/Views/ComplaintsOptions/Index.cshtml
+++ b/ComplaintsManagement.UI/Views/ComplaintsOptions/Index.cshtml
@@ -56,6 +56,7 @@
                             <th>Id</th>
                             <th>Nombre</th>
                             <th>Producto</th>
+                            <th>Departamento</th>
                             <th>Acciones</th>
                         </tr>
                     </thead>
@@ -66,6 +67,7 @@
                                 <td>@option.Id</td>
                                 <td>@option.Name</td>
                                 <td>@option.Product.Name</td>
+                                <td>@option.Departments.Name</td>
 
 
 
