--- a/ComplaintsManagement.UI/Views/Roles/AddUserRole.cshtml
+++ b/ComplaintsManagement.UI/Views/Roles/AddUserRole.cshtml
@@ -54,7 +54,7 @@
                         </div>
                     }
                 </div>
-                <div class="col-lg-12">
+                @*<div class="col-lg-12">
                     <table class="table">
                         <thead>
                             <tr>
@@ -89,10 +89,10 @@
                             }
                         </tbody>
                     </table>
-                </div>
+                </div>*@
             </div>
 
-
+            </div>
         </div>
     </div>
 
