--- a/ComplaintsManagement.UI/Views/Shared/_Layout.cshtml
+++ b/ComplaintsManagement.UI/Views/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/jquerydatatable")
     @Scripts.Render("~/bundles/js")
+    @Scripts.Render("~/bundles/select2")
     @RenderSection("scripts", required: false)
 </body>
 </html>
