--- a/ComplaintsManagement.UI/Views/Shared/_Sidebar.cshtml
+++ b/ComplaintsManagement.UI/Views/Shared/_Sidebar.cshtml
@@ -26,10 +26,17 @@
                 <li>
                     <a href="/departments"><i class="far fa-building"></i> Departamentos</a>
                 </li>
+                <li>
+                    <a href="/complaints"><i class="fas fa-list-alt"></i> Reclamos y Quejas</a>
+                </li>
             }
-            <li>
-                <a href="/complaints"><i class="fas fa-list-alt"></i> Reclamos</a>
-            </li>
+            else
+            {
+                <li>
+                    <a href="/complaints"><i class="fas fa-list-alt"></i> Mis Reclamos y Quejas</a>
+                </li>
+            }
+
         </ul>       
     </nav>
 }
