--- a/ComplaintsManagement.UI/Views/Complaints/Details.cshtml
+++ b/ComplaintsManagement.UI/Views/Complaints/Details.cshtml
@@ -63,8 +63,8 @@
             <h3 class="text-white">Bitácora</h3>
         </div>
     </div>
-    <div class="container">
-        <div class="row card-body">
+    <div class="container card-body">
+        <div class="row ">
             <div class="col-12">
                 <table class="table">
                     <thead>
@@ -84,8 +84,30 @@
                             <td>Sometido</td>
                             <td>Comentario de prueba</td>
                         </tr>
+                        <tr>
+                            <td>Nelson Veras</td>
+                            <td>Queja</td>
+                            <td>21/03/2021 12:36 P.M.</td>
+                            <td>Transferido</td>
+                            <td>Asignado al departamento de cobros</td>
+                        </tr>
                     </tbody>
                 </table>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <hr/>
+                <div class="form-group">
+                    <textarea class="form-control" placeholder="Comentario de seguimiento."></textarea>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="form-group">
+                    <button class="btn btn-primary">Agregar comentario</button>
+                </div>
             </div>
         </div>
     </div>
