--- a/ComplaintsManagement.UI/Views/Complaints/Index.cshtml
+++ b/ComplaintsManagement.UI/Views/Complaints/Index.cshtml
@@ -64,6 +64,7 @@
                             <th>Reclamación o Queja</th>
                             <th>Producto</th>
                             <th>Estado</th>
+                            <th>Tipo</th>
                             <th>Fecha de creación</th>
                             <th>Acciones</th>
                         </tr>
@@ -78,6 +79,7 @@
                                 <td>@complaints.ComplaintsOption.Name</td>
                                 <td>@complaints.Product.Name</td>
                                 <td>@complaints.Status.Name</td>
+                                <td>@complaints.TicketType.Description</td>
                                 <td>@complaints.CreatedAt.ToString("MM/dd/yyyy hh:mm tt")</td>
 
 
