--- a/ComplaintsManagement.UI/Views/Complaints/Details.cshtml
+++ b/ComplaintsManagement.UI/Views/Complaints/Details.cshtml
@@ -9,7 +9,10 @@
         <div>
             <h3 class="text-white">Detalles del Reclamo o Queja</h3>
         </div>
-        <div class="alert alert-warning">Estado: <span class="font-weight-bold">@Model.Data.Status.Name</span> </div>
+        <div class="d-flex">
+            <div class="alert alert-warning mr-2">Estado: <span class="font-weight-bold">@Model.Data.Status.Name</span> </div>
+            <div class="alert alert-warning">Tipo Ticket: <span class="font-weight-bold">@Model.Data.TicketType.Description</span> </div>
+        </div>
     </div>
     <div class="container">
         <div class="row card-body">
