Mapper Profile for entites added

--- a/ComplaintsManagement.UI/Views/Complaints/Index.cshtml
+++ b/ComplaintsManagement.UI/Views/Complaints/Index.cshtml
@@ -75,7 +75,7 @@
                             <tr>
                                 <td>@complaints.Id</td>
                                 <td>@complaints.Customer.Name @complaints.Customer.LastName (@complaints.Customer.DocumentNumber)</td>
-                                <td>@complaints.Department.Name</td>
+                                <td>@complaints.Deparment.Name</td>
                                 <td>@complaints.ComplaintsOption.Name</td>
                                 <td>@complaints.Product.Name</td>
                                 <td>@complaints.Status.Name</td>
