--- a/ComplaintsManagement.UI/Views/Complaints/Details.cshtml
+++ b/ComplaintsManagement.UI/Views/Complaints/Details.cshtml
@@ -26,7 +26,7 @@
             <div class="col-12">
                 <div class="form-group">
                     <h5>Departamento Responsable:</h5>
-                    <h5 class="font-weight-bold">@Model.Data.Department.Name</h5>
+                    <h5 class="font-weight-bold">@Model.Data.Deparment.Name</h5>
                     <hr />
                 </div>
             </div>
