--- a/ComplaintsManagement.UI/Views/Status/_CreateOrUpdate.cshtml
+++ b/ComplaintsManagement.UI/Views/Status/_CreateOrUpdate.cshtml
@@ -1,6 +1,6 @@
 ﻿@model  ComplaintsManagement.UI.Models.TaskResult<ComplaintsManagement.Infrastructure.DTOs.StatusDto>
 
-@{ 
+@{
     var isUpdate = Model?.Data?.Id > 0;
     var actionName = isUpdate ? "Edit" : "Create";
     var title = isUpdate ? "Edición de Status" : "Creación  de Status";
@@ -41,4 +41,8 @@
             </div>
         </div>
     </div>
+}
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
 }
