add to the binnacle

--- a/ComplaintsManagement.UI/Views/Complaints/Index.cshtml
+++ b/ComplaintsManagement.UI/Views/Complaints/Index.cshtml
@@ -25,7 +25,7 @@
 }
 
 <div class="card">
-    <div class="card-header bg-primary"><h2 class="text-white">Mantenimiento de Quejas y Reclamaciones</h2></div> 
+    <div class="card-header bg-primary"><h2 class="text-white">Quejas y Reclamaciones</h2></div> 
     <div class="container card-body">
         <h4 class="mt-4">Listado de Quejas y Reclamaciones</h4>
         <hr />
