--- a/ComplaintsManagement.UI/Views/Complaints/Details.cshtml
+++ b/ComplaintsManagement.UI/Views/Complaints/Details.cshtml
@@ -65,6 +65,14 @@
         <div>
             <h3 class="text-white">Bitácora</h3>
         </div>
+        <div class="d-flex">
+            @if (User.Identity.Name == Model.Data.Customer.Email)
+            {
+                <div class="form-group">
+                    <button  class="btn btn-warning">Cerrar @Model.Data.TicketType.Description </button>
+                </div>
+            }          
+        </div>
     </div>
     <div class="container card-body">
         <div class="row ">
@@ -78,7 +86,7 @@
                             <th>Comentario</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="binnacle_tbody">
 
                         @foreach (var binnacle in Model.Data.Binnacles)
                         {
@@ -95,21 +103,78 @@
         </div>
         <div class="row">
             <div class="col-12">
-                <hr/>
+                <hr />
                 <div class="form-group">
-                    <textarea class="form-control" placeholder="Comentario de seguimiento."></textarea>
+                    <textarea class="form-control" id="comment_textarea" placeholder="Comentario de seguimiento."></textarea>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-12">
                 <div class="form-group">
-                    <button class="btn btn-primary">Agregar comentario</button>
+                    <button id="add_comment_btn" class="btn btn-primary">Agregar comentario</button>
                 </div>
             </div>
         </div>
     </div>
-  
+
 </div>
 
 
+@section Scripts {
+    <script>
+        const binnacleTBody = document.querySelector("#binnacle_tbody");
+        const commentTextArea = document.querySelector("#comment_textarea");
+        const addCommentBtn = document.querySelector("#add_comment_btn");
+        const complaintsId = @Model.Data.Id;
+        const getBinnacles = () => {
+
+
+            fetch(`/binnacles/get?complaintsId=${complaintsId}`)
+                .then(e => e.json())
+                .then(e => console.log(e))
+                .catch(e => console.error(e));
+        }
+
+
+
+        const createBinnacle = (comment) => {
+            let binnacle = {
+                comment,
+                complaintsId: complaintsId
+            };
+
+            fetch("/binnacles/add", {
+                method: "POST",
+                headers: { "accept": "application/json", "content-type": "application/json" },
+                body: JSON.stringify(binnacle)
+            })
+                .then(e => e.json())
+                .then(e => {
+                    //Draw new binnacle row
+                    location.reload();
+                })
+                .catch(e => console.error(e));
+
+
+            //ApplicationUserId = Data.UsersId,
+            //    StatusId = Data.StatusId,
+            //    Comment = $"La {ticketType.Data.Description} se ha creado con el estado: {StatusName.COMMITED}",
+            //        ComplaintsId = result.Data.Id
+        }
+
+
+        addCommentBtn.addEventListener("click", (e) => {
+            if (commentTextArea.value.length === 0) {
+                alert("Debe de escribir un comentario");
+                return;
+            }
+
+
+            createBinnacle(commentTextArea.value);
+
+        });
+
+        document.onload = getBinnacles();
+    </script>
+}
