--- a/ComplaintsManagement.UI/Views/Shared/_Sidebar.cshtml
+++ b/ComplaintsManagement.UI/Views/Shared/_Sidebar.cshtml
@@ -33,7 +33,7 @@
             else
             {
                 <li>
-                    <a href="/complaints"><i class="fas fa-list-alt"></i> Mis Reclamos y Quejas</a>
+                    <a href="/complaints"><i class="fas fa-list-alt"></i> Reclamos y Quejas</a>
                 </li>
             }
 
