--- a/ComplaintsManagement.UI/Views/Departments/Index.cshtml
+++ b/ComplaintsManagement.UI/Views/Departments/Index.cshtml
@@ -31,13 +31,13 @@
     <div class="container">
         <h4 class="mt-3">Listado de Departamentos</h4>
         <hr />
-        @if (!Success && Message?.Length > 0)
+        @if (!Success && Model.Message != null && Model.Message.Length > 0)
         {
             <span class="alert alert-danger">@Message</span>
             <hr />
         }
 
-        @if (Success && Message?.Length > 0)
+        @if (Success && Model.Message != null && Model.Message.Length > 0)
         {
             <span class="alert alert-success">@Message</span>
             <hr />
