--- a/ComplaintsManagement.UI/Views/Complaints/Create.cshtml
+++ b/ComplaintsManagement.UI/Views/Complaints/Create.cshtml
@@ -27,7 +27,7 @@
                         <hr />
                     }
 
-                    @if (Model.Success && Model.Message?.Length > 0)
+                    @if (Model.Success && Model.Message != null && Model.Message.Length > 0)
                     {
                         <span class="alert alert-success" style="margin-top: 2rem;">@Model.Message - @Html.ActionLink("Ver detalles del ticket", "Details", new { Id = Model.Data.Id }) </span>
                         <hr />
@@ -59,15 +59,6 @@
                             @Html.DropDownListFor(e => e.Data.TicketTypesId, (List<SelectListItem>)ViewBag.TicketTypes, new { @Class = "form-control" })
                         </div>
                     </div>
-                    @*<div class="form-group">
-                        <label class="control-label col-md-2">Tipo</label>
-                        <div class="col-md-12">
-                            <select name="Data.Type" class="form-control">
-                                <option value="queja">Queja</option>
-                                <option value="reclamacion">Reclamacion</option>
-                            </select>
-                        </div>
-                    </div>*@
                     @Html.HiddenFor(e => e.Data.StatusId)
                     <div class="form-group">
                         <label class="control-label col-md-2">Comentario</label>
