--- a/ComplaintsManagement.UI/Views/Customers/Products.cshtml
+++ b/ComplaintsManagement.UI/Views/Customers/Products.cshtml
@@ -15,7 +15,7 @@
             <span class="alert alert-danger">@Model.Message</span>
         }
 
-        @if (Model.Success && Model.Message?.Length > 0)
+        @if (Model.Success && Model.Message != null && Model.Message.Length > 0)
         {
             <span class="alert alert-success">@Model.Message</span>
         }
