--- a/ComplaintsManagement.UI/Views/Products/Edit.cshtml
+++ b/ComplaintsManagement.UI/Views/Products/Edit.cshtml
@@ -23,7 +23,7 @@
                                 <hr />
                             }
 
-                            @if (Model.Success && Model.Message?.Length > 0)
+                            @if (Model.Success && Model.Message != null && Model.Message.Length > 0)
                             {
                                 <span class="alert alert-success">@Model.Message</span>
                                 <hr />
